test/tests/stages/5_local_variables/valid/assign_val_in_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  identifier(a)
  =
  const int(5)
  ;
  return
  identifier(a)
  ;
  }
