test/tests/stages/5_local_variables/invalid_parse/malformed_compound_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  identifier(a)
  =
  /
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
